--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
+# Gnosis Docker .gitignore
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-env/
-venv/
-ENV/
 build/
 develop-eggs/
 dist/
@@ -19,41 +18,99 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
-# Flask
-instance/
-.webassets-cache
-
-# Environment
+# Virtual environments
 .env
-.env.local
-.env.staging
-.env.production
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Logs
 *.log
 logs/
+*.log.*
+
+# Backup and versioning directories (the main issue)
+.*_versions/
+*_versions/
+*.backup
+*.bak
+*.orig
+*.tmp
+
+# Docker
+.docker/
+docker-compose.override.yml
+
+# Local configuration
+config.local.json
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Node.js (if any)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Claude and AI tools
+.claude/
+.cursor/
 
 # Testing
 .pytest_cache/
 .coverage
 htmlcov/
+.tox/
+.cache
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
-# OS
-.DS_Store
-Thumbs.db
+# Secrets and sensitive data
+*.key
+*.pem
+*.crt
+secrets/
+.secrets/
 
-# Docker
-.dockerignore
+# Build artifacts
+*.deb
+*.rpm
+*.tar.gz
+*.zip
 
-# Project specific
-gnosis-docker.log
+# Temporary files
+tmp/
+temp/
+.tmp/
+\n# Added by cleanup script\n# Python cache\n
